# wireless-sensors-mesh

./: .gitignore  .gitmodules  BACKLOG.md  README.md
certs/: README.md  localhost_cert.pem  localhost_key.pem  rpi_cert.pem  rpi_key.pem
common/: CMakeLists.txt  socket_defs.h  socket_helpers.c  socket_helpers.h
esp32-gas/components/adc_driver/: CMakeLists.txt  adc_driver.c
esp32-gas/components/adc_driver/include/: adc_driver.h
esp32-gas/components/ble_driver/: CMakeLists.txt  ble_driver.c
esp32-gas/components/ble_driver/include/: ble_driver.h
esp32-gas/main/: main.c
esp32-temp/main/: main.c
esp32-tmp/: components
esp32-tmp/main/: main.c
pc-cli/: CMakeLists.txt  client.py
pc-cli/src/: CMakeLists.txt  main.c
pc-gui/: pc-gui.sln
pc-gui/pc-gui/: Form1.Designer.cs  Form1.cs  Program.cs  pc-gui.csproj
pc_cli/: CMakeLists.txt
pc_cli/src/: CMakeLists.txt  main.c
rpi-gw/: CMakeLists.txt  client.py  main.py  server.py
rpi-gw/src/: CMakeLists.txt  ble_driver.c  ble_driver.h  main.c
rpi_gw/: CMakeLists.txt
rpi_gw/src/: main.c
